feat(AG-020): expanded and ref clients functions
