# docs/swagger.json
@@ -32,11 +32,11 @@
                 "parameters": [
                     {
                         "description": "Channel creation parameters",
-                        "name": "CreateChannelRequest",
+                        "name": "lpmodels.CreateChannel",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/channelshandler.CreateChannelRequest"
+                            "$ref": "#/definitions/lpmodels.CreateChannel"
                         }
                     }
                 ],
@@ -89,7 +89,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID канала",
+                        "description": "ID of the channel",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -139,11 +139,11 @@
                 "parameters": [
                     {
                         "description": "Sign-in parameters",
-                        "name": "SingInRequest",
+                        "name": "ssomodels.LogIn",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/authhandler.SingInRequest"
+                            "$ref": "#/definitions/ssomodels.LogIn"
                         }
                     }
                 ],
@@ -191,11 +191,11 @@
                 "parameters": [
                     {
                         "description": "Registration parameters",
-                        "name": "SingUpRequest",
+                        "name": "ssomodels.RegisterUser",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/authhandler.SingUpRequest"
+                            "$ref": "#/definitions/ssomodels.RegisterUser"
                         }
                     }
                 ],
@@ -223,21 +223,6 @@
         }
     },
     "definitions": {
-        "authhandler.SingInRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "authhandler.SingInResponse": {
             "type": "object",
             "properties": {
@@ -255,21 +240,6 @@
                 }
             }
         },
-        "authhandler.SingUpRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "authhandler.SingUpResponse": {
             "type": "object",
             "properties": {
@@ -279,30 +249,7 @@
                 "status": {
                     "type": "string"
                 },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "channelshandler.CreateChannelRequest": {
-            "type": "object",
-            "required": [
-                "description",
-                "name",
-                "public"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "minLength": 10
-                },
-                "name": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 3
-                },
-                "public": {
-                    "description": "UserID      int64  `json:\"user_id\" validate:\"required,numeric\"`",
+                "success": {
                     "type": "boolean"
                 }
             }
@@ -323,34 +270,97 @@
         },
         "channelshandler.GetChannelResponce": {
             "type": "object",
-            "required": [
-                "created_by",
-                "description",
-                "last_modified_by",
-                "name",
-                "public"
-            ],
             "properties": {
-                "created_by": {
-                    "type": "integer"
-                },
-                "description": {
-                    "type": "string"
+                "channel": {
+                    "$ref": "#/definitions/lpmodels.GetChannelResponse"
                 },
                 "error": {
                     "type": "string"
                 },
-                "last_modified_by": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "lpmodels.CreateChannel": {
+            "type": "object",
+            "required": [
+                "created_by",
+                "name"
+            ],
+            "properties": {
+                "created_by": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "lpmodels.GetChannelResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "createdBy": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "integer"
+                },
+                "lastModifiedBy": {
+                    "type": "string"
+                },
+                "modified": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "plans": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/lpmodels.Plan"
+                    }
+                }
+            }
+        },
+        "lpmodels.Plan": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "createdBy": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isPublished": {
+                    "type": "boolean"
+                },
+                "lastModifiedBy": {
+                    "type": "string"
+                },
+                "modified": {
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
                 "public": {
                     "type": "boolean"
-                },
-                "status": {
-                    "type": "string"
                 }
             }
         },
@@ -361,6 +371,39 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "ssomodels.LogIn": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "ssomodels.RegisterUser": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
