# internal/handlers/learning_platform/channels/handler_channel.go
@@ -7,17 +7,16 @@ import (
 	"net/http"
 	"strconv"
 
+	lpgrpc "github.com/DimTur/lp_api_gateway/internal/clients/lp/grpc"
+	lpmodels "github.com/DimTur/lp_api_gateway/internal/clients/lp/models"
 	"github.com/DimTur/lp_api_gateway/internal/lib/api/response"
 	"github.com/DimTur/lp_api_gateway/pkg/meter"
 	"github.com/DimTur/lp_api_gateway/pkg/tracer"
-	lpv1 "github.com/DimTur/lp_protos/gen/go/lp"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
 	"github.com/go-chi/render"
 	"github.com/go-playground/validator/v10"
 	"go.opentelemetry.io/otel/attribute"
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
 )
 
 var (
@@ -34,33 +33,13 @@ type CreateChannelRequest struct {
 	Public bool `json:"public" validate:"required,boolean"`
 }
 
-type CreateChannelResponce struct {
-	response.Response
-	ChannelID int64 `json:"channel_id,omitempty"`
-}
-
 type GetChannelRequest struct {
 	ChannelID int64 `json:"channel_id,omitempty"`
 }
 
-type GetChannelResponce struct {
-	response.Response
-	Name           string `json:"name" validate:"required,name"`
-	Description    string `json:"description" validate:"required,description"`
-	CreatedBy      int64  `json:"created_by" validate:"required,created_by"`
-	LastModifiedBy int64  `json:"last_modified_by" validate:"required,last_modified_by"`
-	Public         bool   `json:"public" validate:"required,public"`
-}
-
 type LPService interface {
-	CreateChannel(
-		ctx context.Context,
-		name string,
-		description string,
-		userID int64,
-		public bool,
-	) (*lpv1.CreateChannelResponse, error)
-	GetChannel(ctx context.Context, channelID int64) (*lpv1.GetChannelResponse, error)
+	CreateChannel(ctx context.Context, newChannel *lpmodels.CreateChannel) (*lpmodels.CreateChannelResponse, error)
+	GetChannel(ctx context.Context, channel *lpmodels.GetChannel) (*lpmodels.GetChannelResponse, error)
 }
 
 var Validate = validator.New()
@@ -71,14 +50,14 @@ var Validate = validator.New()
 // @Tags         channels
 // @Accept       json
 // @Produce      json
-// @Param        CreateChannelRequest body channelshandler.CreateChannelRequest true "Channel creation parameters"
+// @Param        lpmodels.CreateChannel body lpmodels.CreateChannel true "Channel creation parameters"
 // @Success      201 {object} channelshandler.CreateChannelResponce
 // @Failure      400 {object} response.Response "Invalid data in the request"
 // @Failure      401 {string} string "Unauthorized"
 // @Failure      500 {object} response.Response "Server error"
 // @Router       /create_channel [post]
 // @Security ApiKeyAuth
-func CreateChannel(log *slog.Logger, lpService LPService) http.HandlerFunc {
+func CreateChannel(log *slog.Logger, val *validator.Validate, lpService LPService) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		const op = "handlers.learning_platform.channels.CreateChannel"
 
@@ -93,26 +72,16 @@ func CreateChannel(log *slog.Logger, lpService LPService) http.HandlerFunc {
 		_, span := tracer.LPtracer.Start(r.Context(), "CreateChannel")
 		defer span.End()
 
-		var req CreateChannelRequest
+		var req lpmodels.CreateChannel
 
-		userIDStr := r.Header.Get("X-User-ID")
-		if userIDStr == "" {
+		userID := r.Header.Get("X-User-ID")
+		if userID == "" {
 			log.Error("missing X-User-ID in headers")
 			http.Error(w, "Unauthorized", http.StatusUnauthorized)
 			return
 		}
 
-		span.AddEvent("transform_header_started")
-		userID, err := strconv.ParseInt(userIDStr, 10, 64)
-		if err != nil {
-			log.Error("invalid X-User-ID in headers", slog.String("err", err.Error()))
-			http.Error(w, "Unauthorized", http.StatusUnauthorized)
-			return
-		}
-		span.AddEvent("transform_completed")
-		span.SetAttributes(attribute.Int64("X-User-ID", userID))
-
-		err = render.DecodeJSON(r.Body, &req)
+		err := render.DecodeJSON(r.Body, &req)
 		if err != nil {
 			log.Error("failed to decode request body", slog.String("err", err.Error()))
 			w.WriteHeader(http.StatusBadRequest)
@@ -135,36 +104,32 @@ func CreateChannel(log *slog.Logger, lpService LPService) http.HandlerFunc {
 		span.SetAttributes(attribute.String("channel", req.Name))
 
 		span.AddEvent("channel_create_started")
-		respID, err := lpService.CreateChannel(
+		resp, err := lpService.CreateChannel(
 			r.Context(),
-			req.Name,
-			req.Description,
-			userID,
-			req.Public,
+			&req,
 		)
 		if err != nil {
-			if st, ok := status.FromError(err); ok {
-				if st.Code() == codes.InvalidArgument {
-					log.Error("invalid credentials", slog.Any("channel", req.Name))
-					w.WriteHeader(http.StatusBadRequest)
-					render.JSON(w, r, response.Error("invalid credentials"))
-					return
-				}
+			switch {
+			case errors.Is(err, lpgrpc.ErrInvalidCredentials):
+				log.Error("invalid credentials", slog.Any("channel", req.Name))
+				w.WriteHeader(http.StatusBadRequest)
+				render.JSON(w, r, response.Error("invalid credentinals"))
+				return
+			default:
+				log.Error("failed to create channel", slog.String("err", err.Error()))
+				w.WriteHeader(http.StatusInternalServerError)
+				render.JSON(w, r, response.Error("failed to create channel"))
+				return
 			}
-
-			log.Error("failed to create channel", slog.String("err", err.Error()))
-			w.WriteHeader(http.StatusInternalServerError)
-			render.JSON(w, r, response.Error("failed to create channel"))
-			return
 		}
 		span.AddEvent("channel_create_completed")
 		span.SetAttributes(attribute.String("channel", req.Name))
 
-		log.Info("channel created", slog.Int64("id", respID.Channel.ChannelId))
+		log.Info("channel created", slog.Int64("id", resp.ID))
 
 		render.JSON(w, r, CreateChannelResponce{
 			Response:  response.OK(),
-			ChannelID: respID.Channel.ChannelId,
+			ChannelID: resp.ID,
 		})
 		w.WriteHeader(http.StatusCreated)
 	}
@@ -176,14 +141,14 @@ func CreateChannel(log *slog.Logger, lpService LPService) http.HandlerFunc {
 // @Tags         channels
 // @Accept       json
 // @Produce      json
-// @Param        id path int true "ID канала"
+// @Param        id path int true "ID of the channel"
 // @Success      200 {object} channelshandler.GetChannelResponce
 // @Failure      400 {object} response.Response "Invalid data in the request"
 // @Failure      404 {object} response.Response "Channel not found"
 // @Failure      500 {object} response.Response "Server error"
 // @Router       /get_channel/{id} [get]
 // @Security ApiKeyAuth
-func GetChannel(log *slog.Logger, lpService LPService) http.HandlerFunc {
+func GetChannel(log *slog.Logger, val *validator.Validate, lpService LPService) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		const op = "handlers.learning_platform.channels.GetChannel"
 
@@ -216,21 +181,21 @@ func GetChannel(log *slog.Logger, lpService LPService) http.HandlerFunc {
 		span.SetAttributes(attribute.Int64("channelID", channelID))
 
 		span.AddEvent("getting_channel_started")
-		channel, err := lpService.GetChannel(r.Context(), channelID)
+		c := &lpmodels.GetChannel{
+			ChannelID: channelID,
+		}
+		channel, err := lpService.GetChannel(r.Context(), c)
 		if err != nil {
-			if st, ok := status.FromError(err); ok {
-				if st.Code() == codes.NotFound {
-					log.Error("channel not found", slog.Int64("channel_id", channelID))
-					w.WriteHeader(http.StatusNotFound)
-					render.JSON(w, r, response.Error("channel does not exist"))
-					return
-				}
+			switch {
+			case errors.Is(err, lpgrpc.ErrChannelNotFound):
+				log.Error("channel not found", slog.Int64("channel_id", channelID))
+				w.WriteHeader(http.StatusNotFound)
+				render.JSON(w, r, response.Error("channel does not exist"))
+			default:
+				log.Error("failed to get channel", slog.String("err", err.Error()))
+				w.WriteHeader(http.StatusInternalServerError)
+				render.JSON(w, r, response.Error("Internal Server Error"))
 			}
-
-			log.Error("failed to get channel", slog.String("err", err.Error()))
-			w.WriteHeader(http.StatusInternalServerError)
-			render.JSON(w, r, response.Error("Internal Server Error"))
-			return
 		}
 		span.AddEvent("getting_channel_completed")
 		span.SetAttributes(attribute.Int64("channelID", channelID))
@@ -238,12 +203,8 @@ func GetChannel(log *slog.Logger, lpService LPService) http.HandlerFunc {
 		log.Info("channel retrieved", slog.Int64("channel_id", channelID))
 
 		render.JSON(w, r, GetChannelResponce{
-			Response:       response.OK(),
-			Name:           channel.Channel.Name,
-			Description:    channel.Channel.Description,
-			CreatedBy:      channel.Channel.CreatedBy,
-			LastModifiedBy: channel.Channel.LastModifiedBy,
-			Public:         channel.Channel.Public,
+			Response: response.OK(),
+			Channel:  *channel,
 		})
 	}
 }
